examples/errors/son0019_no_outsideFunction.js
defineFunction()

no(a === 10)
